[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pudl"]

[tool.hatch.version]
source = "vcs"
# Use CalVer-style versioning: YYYY.MM.PATCH (years 2000-2099)
# Only consider tags matching v20*.*.* to avoid nightly and other non-version tags
tag-pattern = "^v(?P<version>20\\d{2}\\.\\d{1,2}\\.\\d{1,2})$"
fallback-version = "0.0.0.dev0"

[tool.hatch.version.raw-options]
# Tell git to only consider version tags, not nightly-* or other tags
git_describe_command = ["git", "describe", "--tags", "--long", "--match", "v20*"]
# Disable local version identifier (no +g1234567 suffix)
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/pudl/_version.py"

[project]
name = "catalystcoop.pudl"
description = "An open data processing pipeline for US energy data"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Catalyst Cooperative", email = "pudl@catalyst.coop" },
]
requires-python = ">=3.13,<3.14.0a0"
dynamic = ["version"]
license = "MIT"
# All dependencies are managed through pixi, ensuring they're always installed from
# conda-forge if available. See tool.pixi.dependencies, tool.pixi.pypi-dependencies,
# and tool.pixi.package.run-dependencies below. This means that the package cannot be
# installed with pip or uv, but it is set up to be built with pixi into a conda package
# which can be installed with conda, mamba, micromamba, pixi, etc.
dependencies = []

[project.urls]
"Homepage" = "https://github.com/catalyst-cooperative/pudl"
"Source" = "https://github.com/catalyst-cooperative/pudl"
"Documentation" = "https://catalystcoop-pudl.readthedocs.io"
"Issue Tracker" = "https://github.com/catalyst-cooperative/pudl/issues"
"Support" = "https://github.com/catalyst-cooperative/pudl/discussions"
"Funding" = "https://catalyst.coop/support-the-pudl-project/"

[tool.pixi.workspace]
name = "catalystcoop.pudl"
platforms = ["linux-64", "osx-64", "osx-arm64"]
channels = ["conda-forge"]
channel-priority = "strict"
preview = ["pixi-build"]

# This is an expansive listing of all PUDL dependencies that are available via
# conda-forge. It includes development, testing, and run-time dependencies.
# For any dependency with an upper bound on the version, please add a
# comment explaining why it's necessary.
[tool.pixi.dependencies]
alembic = ">=1.17"
boto3 = ">=1.35"
bottleneck = ">=1.5.0"
"catalystcoop.dbfread" = ">=3.0,<3.1"
"catalystcoop.ferc_xbrl_extractor" = ">=1.8,<1.9"
click = ">=8.3"
coloredlogs = ">=14.0"
coverage = ">=7.13"
curl = ">=8.17"
dagster = ">=1.12.10"
dagster-dbt = ">=1!0.28.10"
dagster-dg-cli = ">=1.12.10"
dagster-gcp = ">=1!0.28.10"
dagster-postgres = ">=1!0.28.10"
dagster-webserver = ">=1.12.10"
dbt-core = ">=1.11.5"
dbt-duckdb = ">=1.9.4"
deepdiff = ">=8"
doc8 = ">=1.1"
email-validator = ">=1.0.3"
frictionless = ">=5,<6"
fsspec = ">=2025"
gcsfs = ">=2025"
# The Python geospatial stack is notoriously finnicky and full of compiled # extensions
# that have to be kept in sync. If this isn't pinned things will probably break.
gdal = "==3.12.2"
geoarrow-pyarrow = ">=0.2"
geopandas = ">=1.1"
google-cloud-sdk = ">=535"
# grpcio packages all need to have same version to avoid conflicts.
# They are also compiled and finnicky. Check compatibility before upgrading.
# Upgrade to 1.74.0 blocked by stale libgoogle-cloud on conda-forge
# Upgrade to 1.76.0 blocked by stale grpcio on conda-forge
grpcio = "==1.73.1"
grpcio-health-checking = "==1.73.1"
grpcio-status = "==1.73.1"
hypothesis = ">=6.123"
jellyfish = ">=1"
jinja2 = ">=3.1"
jupyter = ">=1.1"
jupyter-lsp = ">=2.3"
jupyter-resource-usage = ">=1.2"
jupyterlab = ">=4.5"
jupyterlab-lsp = ">=5.2"
matplotlib-base = ">=3.10"
memray = ">=1.18.0"
mlflow = ">=3.8"
nbconvert = ">=7"
nbformat = ">=5.10"
networkx = ">=3.6"
nodejs = ">=24"
numba = ">=0.63.1"
numexpr = ">=2.10"
numpy = ">=2.3"
packaging = ">=25"
pandas = ">=2.3"
pandoc = ">=3.7"
pandera-polars = ">=0.27"
parallel = ">=20250822"
polars = ">=1.38"
pre-commit = ">=4.5"
# potentially unresolveable breaking changes in prettier 4.x
prettier = ">=3.7,<4"
# pyarrow upgrade blocked by stale geopandas 0.14 in Kaggle environment
pyarrow = "<21"
pydantic = ">=2.12"
pydantic-settings = ">=2.13"
pygraphviz = ">=1"
pytest = ">=9"
pytest-console-scripts = ">=1.4"
pytest-cov = ">=7"
pytest-mock = ">=3.15"
pytest-order = ">=1.3"
pytest-xdist = ">=3.8"
python-calamine = ">=0.6.1"
python-dotenv = ">=1"
python-duckdb = ">=1.4"
pytz = ">=2025"
pyyaml = ">=6"
readthedocs-sphinx-ext = ">=2"
requests = ">=2.32"
responses = ">=0.25"
ruff = ">=0.15"
ruff-lsp = ">=0.0.62"
s3fs = ">=2025"
scikit-learn = ">=1.8"
scipy = ">=1.16"
shapely = ">=2.1.1"
slack-sdk = ">=3.39.0"
sphinx = ">=9"
sphinx-autoapi = ">=3.6.1"
sphinx-issues = ">=5"
sphinx-reredirects = ">=1"
sphinxcontrib-bibtex = ">=2.6"
sphinxcontrib-googleanalytics = ">=0.4"
splink = ">=4.0.14"
sqlalchemy = ">=2"
sqlite = ">=3.51"
terraform = ">=1.14"
timezonefinder = ">=8"
typos = ">=1.40"
universal-pathlib = ">=0.3.7"
urllib3 = ">=2.4"
uv = ">=0.10"
xlsxwriter = ">=3.2"
zip = ">=3.0"

[tool.pixi.pypi-dependencies]
# Install the local package in editable mode. Assume dependencies are specified either
# above in [tools.pixi.dependenccies] (for conda packages) or in this section, if they
# happen to only be available via PyPI.
"catalystcoop.pudl" = { path = ".", editable = true }
# Furo is pure python and the conda package is like a year out of date.
furo = ">=2025"
sphinx-tabs = ">=3.4.7"

[tool.pixi.package]
version = "v0.0.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = ">=0.4.3"
channels = ["conda-forge"]

[tool.pixi.package.build-dependencies]
python = ">=3.13,<3.14.0"

[tool.pixi.package.host-dependencies]
hatchling = ">=1.16"
hatch-vcs = ">=0.5"
uv = ">=0.10"

# This is a list of the minimal set of run-time dependencies required for PUDL to
# be installed and function properly. These should be kept in sync with the more
# expansive list in [tool.pixi.dependencies] above.
[tool.pixi.package.run-dependencies]
alembic = ">=1.17"
boto3 = ">=1.35"
bottleneck = ">=1.5.0"
"catalystcoop.dbfread" = ">=3.0,<3.1"
"catalystcoop.ferc_xbrl_extractor" = ">=1.8,<1.9"
click = ">=8.3"
coloredlogs = ">=14.0"
dagster = ">=1.12.10"
dagster-dbt = ">=0.28.10"
dagster-postgres = ">=0.28.10"
dagster-webserver = ">=1.12.10"
dbt-core = ">=1.11.2"
dbt-duckdb = ">=1.9.4"
email-validator = ">=1.0.3"
frictionless = ">=5,<6"
fsspec = ">=2025"
gcsfs = ">=2025"
# The Python geospatial stack is notoriously finnicky and full of compiled # extensions
# that have to be kept in sync. If this isn't pinned things will probably break.
gdal = "==3.12.2"
geoarrow-pyarrow = ">=0.2"
geopandas = ">=1.1"
# grpcio packages all need to have same version to avoid conflicts.
# They are also compiled and finnicky. Check compatibility before upgrading.
# Upgrade to 1.74.0 blocked by stale libgoogle-cloud on conda-forge
# Upgrade to 1.76.0 blocked by stale grpcio on conda-forge
grpcio = "==1.73.1"
grpcio-health-checking = "==1.73.1"
grpcio-status = "==1.73.1"
jellyfish = ">=1"
jinja2 = ">=3.1"
matplotlib-base = ">=3.10"
mlflow = ">=3.9"
networkx = ">=3.6"
numba = ">=0.63.1"
numexpr = ">=2.10"
numpy = ">=2.3"
packaging = ">=25"
pandas = ">=2.3"
pandera-polars = ">=0.27"
polars = ">=1.38"
pyarrow = ">=17,<21"
pydantic = ">=2.12"
pydantic-settings = ">=2.13"
python-calamine = ">=0.6.1"
python-dotenv = ">=1"
python-duckdb = ">=1.4"
pytz = ">=2025"
pyyaml = ">=6"
requests = ">=2.32"
s3fs = ">=2025"
scikit-learn = ">=1.8"
scipy = ">=1.16"
shapely = ">=2.1.1"
splink = ">=4.0.14"
sqlalchemy = ">=2"
timezonefinder = ">=8"
universal-pathlib = ">=0.3.7"
urllib3 = ">=2.4"
xlsxwriter = ">=3.2"

[tool.pixi.activation.env]
# Reusable variables for pixi tasks
ETL_FAST_YML = "src/pudl/package_data/settings/etl_fast.yml"
ETL_FULL_YML = "src/pudl/package_data/settings/etl_full.yml"

[tool.pixi.tasks]
# Documentation tasks
docs-clean = { cmd = """
bash -c 'shopt -s nullglob; rm -rf \
    docs/_build \
    docs/autoapi \
    docs/data_dictionaries/pudl_db.rst \
    docs/data_dictionaries/codes_and_labels.rst \
    docs/data_dictionaries/code_csvs \
    docs/data_sources/census*.rst \
    docs/data_sources/eia*.rst \
    docs/data_sources/epacems*.rst \
    docs/data_sources/epacamd*.rst \
    docs/data_sources/ferc*.rst \
    docs/data_sources/gridpathratoolkit*.rst \
    docs/data_sources/nrelatb*.rst \
    docs/data_sources/phmsagas*.rst \
    docs/data_sources/sec10k*.rst \
    docs/data_sources/vcerare*.rst'
""", description = "Remove all generated documentation files" }

docs-build = { cmd = """
doc8 docs/ README.rst && \
coverage run --append -m sphinx --jobs auto -v -W -b html docs docs/_build/html
""", depends-on = ["docs-clean"], description = "Build Sphinx documentation" }

# Testing tasks
coverage-erase = { cmd = "coverage erase", description = "Clear coverage data" }
pytest-unit = { cmd = "pytest --cov-fail-under=0 --doctest-modules src/pudl test/unit", description = "Run unit tests and doctests" }
pytest-integration = { cmd = "pytest --cov-fail-under=0 --etl-settings $ETL_FAST_YML test/integration", description = "Run integration tests with fast ETL settings" }
pytest-ci = { cmd = "coverage report", depends-on = ["coverage-erase", "docs-build", "pytest-unit", "pytest-integration"], description = "Run all CI tests and report test coverage" }
pytest-integration-full = { cmd = "pytest --live-dbs --no-cov --etl-settings $ETL_FULL_YML test/integration", description = "Run integration tests against local full ETL outputs" }
pytest-jupyter = { cmd = "pytest --live-dbs test/integration/jupyter_notebooks_test.py", description = "Test Jupyter notebooks" }
# Build the FERC 1 and PUDL DBs, ignoring foreign key constraints.
# Identify any plant or utility IDs in the DBs that haven't yet been mapped
# These outputs should be turned into normal dagster assets. See issue #4338
unmapped-ids = { cmd = """
pytest \
    --save-unmapped-ids
    --ignore-foreign-key-constraints \
    --etl-settings $ETL_FULL_YML \
    test/integration/glue_test.py
""", description = "Identify unmapped plant and utility IDs" }

# ETL tasks
ferc = { cmd = """
bash -c 'shopt -s nullglob; rm -f \
    $PUDL_OUTPUT/ferc*.sqlite \
    $PUDL_OUTPUT/ferc*.duckdb \
    $PUDL_OUTPUT/ferc*_xbrl_datapackage.json \
    $PUDL_OUTPUT/ferc*_xbrl_taxonomy_metadata.json' && \
coverage run --append ferc_to_sqlite $ETL_FULL_YML
""", description = "Build FERC databases from scratch" }

pudl = { cmd = """
bash -c 'shopt -s nullglob; rm -f $PUDL_OUTPUT/pudl.sqlite' && \
alembic upgrade head && \
coverage run --append pudl_etl $ETL_FULL_YML
""", description = "Run full PUDL ETL pipeline" }

# Code quality tasks
pre-commit-run = { cmd = "pre-commit run --all-files", description = "Run all pre-commit hooks" }
pre-commit-install = { cmd = "pre-commit install", description = "Install pre-commit hooks" }

# Dependency Update tasks
pre-commit-autoupdate = { cmd = "pre-commit autoupdate", description = "Update pre-commit hook versions" }
dbt-deps-upgrade = { cmd = "dbt deps --upgrade", cwd = "dbt", description = "Update dbt dependencies" }

[project.scripts]
auto_match_utilities = "pudl.scripts.auto_match_utilities:main"
ferc_to_sqlite = "pudl.ferc_to_sqlite.cli:main"
metadata_to_rst = "pudl.convert.metadata_to_rst:metadata_to_rst"
pudl_check_fks = "pudl.etl.check_foreign_keys:pudl_check_fks"
pudl_datastore = "pudl.workspace.datastore:pudl_datastore"
pudl_deploy = "pudl.scripts.deploy:pudl_deploy"
pudl_etl = "pudl.etl.cli:pudl_etl"
pudl_service_territories = "pudl.analysis.service_territory:pudl_service_territories"
dbt_helper = "pudl.scripts.dbt_helper:dbt_helper"
generate_pudl_duckdb = "pudl.scripts.generate_pudl_duckdb:main"
pudl_null_cols = "pudl.scripts.pudl_null_cols:main"
resource_description = "pudl.scripts.resource_description:main"
zenodo_data_release = "pudl.scripts.zenodo_data_release:pudl_zenodo_data_release"

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py313"
line-length = 88
indent-width = 4
# Don't touch autogenerated alembic migrations and ignore notebooks for now
exclude = ["migrations/versions", "*.ipynb"]

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Configurations that apply to the `lint` subcommand.
preview = true # Required for NPY201
explicit-preview-rules = true # and ONLY NPY201
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C", # Limit cyclomatic complexity using mccabe
    "C4", # flake8-comprehensions
    "D", # pydocstyle errors
    "E", # pycodestyle errors
    "EXE", # executable file issues
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8 import conventions
    "N", # pep8-naming
    "NPY", # NumPy specific checks
    "PD", # pandas checks
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie miscellaneous linting
    "PTH", # use pathlib
    "Q", # flake8-quotes
    "RET", # check return values
    "RSE", # unnecessary parenthises on raised exceptions
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade (use modern python syntax)
    "W", # pycodestyle warnings
    # These rules would be good, but will require more effort:
    # "ANN", # identify missing type annotations
    # "ARG", # find unused arguments
    # "DTZ", # datetime / timzeone issues flake8-datetimez
    # "ERA", # eradicate: finds commented out code
    # "FURB", # refurb: general code quality/modernization. Still in preview.
    # "PERF", # performance issues
    # "PT", # pytest style
    # "PL", # PyLint (lots of rules)
    # "RUF", # Ruff specific rules
    # "T", # Find print statements that should probably be logging
]
ignore = [
    "B006", # Don't use mutable data structures for argument defaults. TODO: FIX
    "B008", # Don't perform function calls in argument defaults. TODO: FIX
    "D401", # Require imperative mood in docstrings.
    "D417",
    "E501", # Overlong lines.
    "E203", # Space before ':' (black recommends to ignore)
    "E226", # Missing whitespace around arithmetic operator
    "E266", # Too many leading `#` before block comment
    "PD003", # Use of isna rather than isnull
    "PD004", # Use of notna rather than notnull
    "PD010", # Use of df.stack()
    "PD013", # Use of df.unstack()
    "PD015", # Use of pd.merge() rather than df.merge()
    "RET504", # Ignore unnecessary assignment before return
    "RUF005", # Unpack iterables instead of concatenation
    "S101", # Use of assert
]
extend-select = ["NPY201"] # preview rule to easy migration to Numpy 2.0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"test/*" = ["D"]
"migrations/*" = ["D", "Q"]

[tool.ruff.lint.isort]
known-first-party = ["pudl"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.doc8]
max-line-length = 88
ignore-path = ["docs/ferc/form1", "docs/_build", "docs/data_sources/phmsagas"]

[tool.pytest]
minversion = "9.0"
testpaths = ["./"]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:Deprecated call to.*declare_namespace:DeprecationWarning:pkg_resources",
    "ignore:Deprecated call to:DeprecationWarning:google.rpc",
    "ignore:Feature names only support names:FutureWarning:sklearn.utils.validation",
    "ignore:In a future version, the Index constructor:FutureWarning:pandas.core.reshape.merge",
    "ignore:Integration of FERC 714:UserWarning:pudl.extract.ferc714",
    "ignore:Integration of EIA 861:UserWarning:pudl.extract.eia861",
    "ignore:pkg_resources is deprecated as an API.:DeprecationWarning",
    "ignore:Subclassing validator classes is not intended to be part of their public API.:DeprecationWarning",
    "ignore:Subclassing validator classes:DeprecationWarning:tableschema",
    "ignore:datetime.datetime.utcnow() is deprecated:DeprecationWarning",
    "ignore:Python 3.14 will, by default, filter extracted tar archives:DeprecationWarning:dbt_common[.*]",
    "ignore:The Shapely GEOS version:UserWarning:geopandas[.*]",
    "ignore:The `__fields__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:unittest.mock",
    "ignore:The `__fields_set__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:unittest.mock",
    "ignore:The `__fields__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:The `__fields_set__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:The `update_forward_refs` method is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:Support for class-based `config` is deprecated:pydantic.PydanticDeprecatedSince20:pydantic._internal._config",
    "ignore:Pydantic V1 style `@validator` validators are deprecated:pydantic.PydanticDeprecatedSince20:ferc_xbrl_extractor.instance",
    "ignore:Pydantic V1 style `@validator` validators are deprecated:pydantic.PydanticDeprecatedSince20:mlflow.gateway.config",
    "ignore:The `update_forward_refs` method is deprecated:pydantic.PydanticDeprecatedSince20:ferc_xbrl_extractor.taxonomy",
    "once:Could not infer format, so each element will be parsed individually, falling back to `dateutil`.:UserWarning:pudl.extract.eia_bulk_elec",
    "once:In a future version:FutureWarning:pudl.helpers",
    "once:open_binary is deprecated:DeprecationWarning:pudl.glue.ferc1_eia",
    "once:open_text is deprecated:DeprecationWarning:pudl.glue.ferc1_eia",
    "once:The behavior of DataFrame concatenation with empty or all-NA entries is deprecated.:FutureWarning",
    "once:Valid config keys have changed in V2:UserWarning",
    "once:AssetExecutionContext.op_config is deprecated:DeprecationWarning",
]

markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
# must not end with `--cov` since that will treat the first argument you pass
# to pytest as a coverage source! see
# https://github.com/catalyst-cooperative/pudl/issues/3609
addopts = [
    "--verbose",
    "--cov",
    "--cov-append",
    "--cov-config=pyproject.toml",
    "--cov-report=",
    "--durations=20",
]
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]

[tool.coverage.run]
source = ["src/pudl/", "test/integration/", "test/unit/"]
omit = ["src/pudl/*/ferceqr*.py", "src/pudl/_version.py"]
relative_files = true

[tool.coverage.report]
precision = 2
sort = "miss"
skip_empty = true
fail_under = 93
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Stuff that's not expected to run normally...
    "logger.debug",
]

[tool.dagster]
modules = [
    { type = "module", name = "pudl.etl" },
    { type = "module", name = "pudl.ferc_to_sqlite" },
]

[tool.typos.default]
# Ignore spellchecking all lines with # spellchecker:ignore
extend-ignore-re = ["(?Rm)^.*(#|//)\\s*spellchecker:ignore$"]

[tool.typos.default.extend-words]
# Add words that should be excepted from spell-checking
ACI = "ACI"
AER = "AER"
AKS = "AKS"
BA = "BA"
BCK = "BCK"
consit = "consit"
cll = "cll"
EDE = "EDE"
fillin = "fillin"
formate = "formate"
ISO = "ISO"
LaMoure = "LaMoure"
Kake = "Kake"
MAPE = "MAPE"
MAPP = "MAPP"
MER = "MER"
Moure = "Moure"
ND = "ND"
OT = "OT"
othr = "othr"
PADD = "PADD"
PN = "PN"
PUDL = "PUDL"
PudlTabl = "PudlTabl"
RTO = "RTO"
ser = "ser"
Tabl = "Tabl"
TOU = "TOU"
TRE = "TRE"
Worchester = "Worchester"
wrk = "wrk"

[tool.typos.files]
extend-exclude = [
    "*.yml",
    "*.toml",
    "*.bib",
    "*.csv",
    "*.html",
    "src/pudl/metadata/codes.py",
    "migrations/",
    "notebooks/",
    "devtools/",
    "test/",
    "src/pudl/transform/params/ferc1.py",
]
